--- a/src/public/auth-example.html
+++ b/src/public/auth-example.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wisdom - 로그인/회원가입</title>
+    <title>인증 예제</title>
     <style>
         * {
             margin: 0;
@@ -13,7 +13,7 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Arial', sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
             display: flex;
@@ -23,39 +23,38 @@
 
         .auth-container {
             background: white;
-            padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 400px;
+            border-radius: 20px;
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            width: 400px;
+            max-width: 90vw;
         }
 
-        .auth-tabs {
+        .tab-container {
             display: flex;
-            margin-bottom: 30px;
+            background: #f8f9fa;
         }
 
         .tab-btn {
             flex: 1;
-            padding: 12px;
+            padding: 20px;
             border: none;
-            background: #f5f5f5;
+            background: transparent;
             cursor: pointer;
-            transition: all 0.3s;
+            font-size: 16px;
             font-weight: 600;
+            color: #666;
+            transition: all 0.3s ease;
         }
 
         .tab-btn.active {
-            background: #667eea;
-            color: white;
+            background: white;
+            color: #667eea;
+            border-bottom: 3px solid #667eea;
         }
 
-        .tab-btn:first-child {
-            border-radius: 8px 0 0 8px;
-        }
-
-        .tab-btn:last-child {
-            border-radius: 0 8px 8px 0;
+        .form-container {
+            padding: 40px;
         }
 
         .auth-form {
@@ -72,18 +71,18 @@
 
         .form-group label {
             display: block;
-            margin-bottom: 5px;
-            font-weight: 600;
+            margin-bottom: 8px;
             color: #333;
+            font-weight: 600;
         }
 
         .form-group input {
             width: 100%;
-            padding: 12px;
-            border: 2px solid #e1e1e1;
-            border-radius: 8px;
+            padding: 12px 16px;
+            border: 2px solid #e1e8ed;
+            border-radius: 10px;
             font-size: 16px;
-            transition: border-color 0.3s;
+            transition: border-color 0.3s ease;
         }
 
         .form-group input:focus {
@@ -93,104 +92,27 @@
 
         .submit-btn {
             width: 100%;
-            padding: 12px;
-            background: #667eea;
-            color: white;
+            padding: 14px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             border: none;
-            border-radius: 8px;
+            border-radius: 10px;
+            color: white;
             font-size: 16px;
             font-weight: 600;
             cursor: pointer;
-            transition: background 0.3s;
-            margin-bottom: 20px;
+            transition: transform 0.2s ease;
         }
 
         .submit-btn:hover {
-            background: #5a6fd8;
-        }
-
-        .social-login {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .social-login p {
-            margin-bottom: 15px;
-            color: #666;
-            font-size: 14px;
-        }
-
-        .social-buttons {
-            display: flex;
-            gap: 10px;
-            justify-content: center;
-        }
-
-        .social-login-btn {
-            width: 50px;
-            height: 50px;
-            border: none;
-            border-radius: 50%;
-            cursor: pointer;
-            transition: transform 0.3s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: bold;
-        }
-
-        .social-login-btn:hover {
             transform: translateY(-2px);
         }
 
-        .social-login-btn.kakao {
-            background: #FEE500;
-            color: #000;
-        }
-
-        .social-login-btn.naver {
-            background: #03C75A;
-            color: white;
-        }
-
-        .social-login-btn.github {
-            background: #333;
-            color: white;
-        }
-
-        .forgot-password {
-            text-align: center;
-            margin-top: 15px;
-        }
-
-        .forgot-password a {
-            color: #667eea;
-            text-decoration: none;
-            font-size: 14px;
-        }
-
-        .forgot-password a:hover {
-            text-decoration: underline;
-        }
-
         .message {
+            margin-top: 20px;
             padding: 10px;
-            margin: 10px 0;
-            border-radius: 5px;
+            border-radius: 8px;
             text-align: center;
             display: none;
-        }
-
-        .error-message {
-            background-color: #ffe6e6;
-            color: #d32f2f;
-            border: 1px solid #d32f2f;
-        }
-
-        .success-message {
-            background-color: #e6ffe6;
-            color: #2e7d32;
-            border: 1px solid #2e7d32;
         }
 
         .loading-message {
@@ -199,11 +121,16 @@
             border: 1px solid #1565c0;
         }
 
-        @media (max-width: 480px) {
-            .auth-container {
-                margin: 20px;
-                padding: 30px 20px;
-            }
+        .success-message {
+            background-color: #e6ffe6;
+            color: #2e7d32;
+            border: 1px solid #2e7d32;
+        }
+
+        .error-message {
+            background-color: #ffe6e6;
+            color: #d32f2f;
+            border: 1px solid #d32f2f;
         }
     </style>
 </head>
@@ -211,109 +138,72 @@
 <body>
     <div class="auth-container">
         <!-- 탭 버튼 -->
-        <div class="auth-tabs">
-            <button class="tab-btn active" onclick="switchTab('login')">로그인</button>
-            <button class="tab-btn" onclick="switchTab('signup')">회원가입</button>
+        <div class="tab-container">
+            <button class="tab-btn active" data-tab="login">로그인</button>
+            <button class="tab-btn" data-tab="signup">회원가입</button>
         </div>
 
-        <!-- 로그인 폼 -->
-        <form id="login-form" class="auth-form active">
-            <div class="form-group">
-                <label for="login-identifier">이메일 또는 닉네임</label>
-                <input type="text" id="login-identifier" name="memberIdentifier" required>
-            </div>
-            <div class="form-group">
-                <label for="login-password">비밀번호</label>
-                <input type="password" id="login-password" name="memberPassword" required>
-            </div>
-            <button type="submit" class="submit-btn">로그인</button>
-
-            <div class="forgot-password">
-                <a href="#" id="forgot-password-btn">비밀번호를 잊으셨나요?</a>
-            </div>
-
-            <!-- 소셜 로그인 -->
-            <div class="social-login">
-                <p>또는 소셜 계정으로 로그인</p>
-                <div class="social-buttons">
-                    <button type="button" class="social-login-btn kakao" data-provider="kakao" title="카카오 로그인">
-                        K
-                    </button>
-                    <button type="button" class="social-login-btn naver" data-provider="naver" title="네이버 로그인">
-                        N
-                    </button>
-                    <button type="button" class="social-login-btn github" data-provider="github" title="깃허브 로그인">
-                        G
-                    </button>
+        <div class="form-container">
+            <!-- 로그인 폼 -->
+            <form id="login-form" class="auth-form active">
+                <div class="form-group">
+                    <label for="login-nick">닉네임</label>
+                    <input type="text" id="login-nick" name="memberNick" required>
                 </div>
-            </div>
-        </form>
-
-        <!-- 회원가입 폼 -->
-        <form id="signup-form" class="auth-form">
-            <div class="form-group">
-                <label for="signup-nick">닉네임</label>
-                <input type="text" id="signup-nick" name="memberNick" required>
-            </div>
-            <div class="form-group">
-                <label for="signup-email">이메일</label>
-                <input type="email" id="signup-email" name="memberEmail" required>
-            </div>
-            <div class="form-group">
-                <label for="signup-phone">전화번호</label>
-                <input type="tel" id="signup-phone" name="memberPhone" required>
-            </div>
-            <div class="form-group">
-                <label for="signup-password">비밀번호</label>
-                <input type="password" id="signup-password" name="memberPassword" required>
-            </div>
-            <div class="form-group">
-                <label for="signup-confirm">비밀번호 확인</label>
-                <input type="password" id="signup-confirm" name="confirmPassword" required>
-            </div>
-            <button type="submit" class="submit-btn">회원가입</button>
-
-            <!-- 소셜 회원가입 -->
-            <div class="social-login">
-                <p>또는 소셜 계정으로 회원가입</p>
-                <div class="social-buttons">
-                    <button type="button" class="social-login-btn kakao" data-provider="kakao" title="카카오 회원가입">
-                        K
-                    </button>
-                    <button type="button" class="social-login-btn naver" data-provider="naver" title="네이버 회원가입">
-                        N
-                    </button>
-                    <button type="button" class="social-login-btn github" data-provider="github" title="깃허브 회원가입">
-                        G
-                    </button>
+                <div class="form-group">
+                    <label for="login-password">비밀번호</label>
+                    <input type="password" id="login-password" name="memberPassword" required>
                 </div>
-            </div>
-        </form>
+                <button type="submit" class="submit-btn">로그인</button>
+            </form>
+
+            <!-- 회원가입 폼 -->
+            <form id="signup-form" class="auth-form">
+                <div class="form-group">
+                    <label for="signup-nick">닉네임</label>
+                    <input type="text" id="signup-nick" name="memberNick" required>
+                </div>
+                <div class="form-group">
+                    <label for="signup-phone">전화번호</label>
+                    <input type="tel" id="signup-phone" name="memberPhone" required>
+                </div>
+                <div class="form-group">
+                    <label for="signup-password">비밀번호</label>
+                    <input type="password" id="signup-password" name="memberPassword" required>
+                </div>
+                <div class="form-group">
+                    <label for="signup-confirm">비밀번호 확인</label>
+                    <input type="password" id="signup-confirm" name="confirmPassword" required>
+                </div>
+                <button type="submit" class="submit-btn">회원가입</button>
+            </form>
+
+            <!-- 메시지 표시 영역 -->
+            <div id="loading-message" class="message loading-message"></div>
+            <div id="success-message" class="message success-message"></div>
+            <div id="error-message" class="message error-message"></div>
+        </div>
     </div>
 
-    <!-- 인증 JavaScript 로드 -->
-    <script src="/js/auth.js"></script>
-
     <script>
-        // 탭 전환 함수
-        function switchTab(tab) {
-            const tabButtons = document.querySelectorAll('.tab-btn');
-            const authForms = document.querySelectorAll('.auth-form');
+        // 탭 전환
+        document.querySelectorAll('.tab-btn').forEach(btn => {
+            btn.addEventListener('click', () => {
+                const tab = btn.dataset.tab;
 
-            // 모든 탭 버튼과 폼 비활성화
-            tabButtons.forEach(btn => btn.classList.remove('active'));
-            authForms.forEach(form => form.classList.remove('active'));
+                // 탭 버튼 활성화
+                document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
+                btn.classList.add('active');
 
-            // 선택된 탭 활성화
-            if (tab === 'login') {
-                tabButtons[0].classList.add('active');
-                document.getElementById('login-form').classList.add('active');
-            } else if (tab === 'signup') {
-                tabButtons[1].classList.add('active');
-                document.getElementById('signup-form').classList.add('active');
-            }
-        }
+                // 폼 전환
+                document.querySelectorAll('.auth-form').forEach(form => form.classList.remove('active'));
+                document.getElementById(`${tab}-form`).classList.add('active');
+            });
+        });
     </script>
+
+    <!-- AuthManager 스크립트 로드 -->
+    <script src="/js/auth.js"></script>
 </body>
 
 </html>
